Adding link to project 2 Sleep Sync

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 
     <div class="card2">
       <img src="assets/image/BetterBeesMushrooms.jpg" alt="card2">
-      <button2 onclick="location.href='https://dingbat-weasel.github.io/Cosmic-Climate/'">Cosmic-Climate Project</button>
+      <button2 onclick="location.href='https://dingbat-weasel.github.io/Cosmic-Climate/'">Cosmic-Climate Project 1</button>
     </div>
     <div class="card2">
       <img src="assets/image/BeesMushrooms.jpg" alt="card3">
-      <p>More to come</p>
+      <button2 onclick="location.href='https://github.com/jbungurait/Sleep_Tracker_App'">Sleep Sync Project 2</button>
     </div>
     <div class="card3">
       <img src="assets/image/BetterBeesMushrooms.jpg" alt="">
