ADD About me content and comments

--- a/index.html
+++ b/index.html
@@ -26,44 +26,48 @@
 
   <div class="hero"> </div>
 
+  <!--About Me Section-->
     <div class=about id="about">
-      <h1>
-        <img src="assets/image/Me.jpg" height="40" alt="">
+      <h1 class="header">
+        <img src="assets/image/Mee.jpg" height="60" alt="">
          About Me
          
       </h1>
      
-      <p> I've been working in the finacial industry for years, and decided I needed a change. I'm excited to taking my
-        begining steps into front-end web development.</p>
+      <p> Hi there, my name is Shelby. After working in finanacials for years I wanted to try something more creative than crunching numbers, I took a big step and signed up for the UW's coding bootcamp.</p> 
+       <p>While there's nothing wrong with crunching, I've found I prefer coding! I'm consistently working to improve my skills, please see below to see what I've built so far. Thank you!  </p>
   </div>
 
-  <main>
+<br></br> 
+ <!--Work/Work Cards-->
+<main>
     <section id="main">
-    <h1></h1> Work </h1>
+    <h1> Work </h1>
     <div class="card">
-      <img src="assets/image/FoxPattern2.jpg" alt="card">
+      <img src="assets/image/keyboard.jpg" height="250" alt="">
       <button2 onclick="location.href='https://shelcisco.github.io/Refactoring-Challenge/'">Refactoring-Challenge</button>
     </div>
 
     <div class="card2">
-      <img src="assets/image/BetterBeesMushrooms.jpg" alt="card2">
+      <img src="assets/image/catdesk.jpg" height="200" alt="">
       <button2 onclick="location.href='https://dingbat-weasel.github.io/Cosmic-Climate/'">Cosmic-Climate Project 1</button>
     </div>
     <div class="card2">
-      <img src="assets/image/BeesMushrooms.jpg" alt="card3">
+      <img src="assets/image/writing.jpg" height="200" alt="">
       <button2 onclick="location.href='https://github.com/jbungurait/Sleep_Tracker_App'">Sleep Sync Project 2</button>
     </div>
     <div class="card3">
-      <img src="assets/image/BetterBeesMushrooms.jpg" alt="">
+      <img src="assets/image/messydesk.jpg" height="200" alt="">
       <p>More to come</p>
     </div>
     <div class="card3">
-      <img src="assets/image/BeesMushrooms.jpg" alt="">
+      <img src="assets/image/coffee3.jpg" height="200" alt="">
       <p>more to come</p>
     </div>
   </section>
   </main>
-
+  <br></br> 
+   <!--Contact Section-->
   <div class="contact">
     <section id="contact">
       <h1>Contact</h1>
