ADD IDs to images

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     </ul>
   </div>
 
-  <div class="hero"> </div>
+  <div class="hero"></div>
 
   <!--About Me Section-->
     <div class=about id="about">
       <h1 class="header">
-        <img src="assets/image/Mee.jpg" height="60" alt="">
+        <img src="assets/image/Mee.jpg" height="60" alt="" id = "me">
          About Me
          
       </h1>
@@ -44,24 +44,24 @@
     <section id="main">
     <h1> Work </h1>
     <div class="card">
-      <img src="assets/image/keyboard.jpg" height="250" alt="">
+      <img src="assets/image/keyboard.jpg" height="250" alt="" id ="key_img">
       <button2 onclick="location.href='https://shelcisco.github.io/Refactoring-Challenge/'">Refactoring-Challenge</button>
     </div>
 
     <div class="card2">
-      <img src="assets/image/catdesk.jpg" height="200" alt="">
+      <img src="assets/image/catdesk.jpg" height="200" alt="" id ="cat_img">
       <button2 onclick="location.href='https://dingbat-weasel.github.io/Cosmic-Climate/'">Cosmic-Climate Project 1</button>
     </div>
     <div class="card2">
-      <img src="assets/image/writing.jpg" height="200" alt="">
+      <img src="assets/image/writing.jpg" height="200" alt="" id ="write_img">
       <button2 onclick="location.href='https://github.com/jbungurait/Sleep_Tracker_App'">Sleep Sync Project 2</button>
     </div>
     <div class="card3">
-      <img src="assets/image/messydesk.jpg" height="200" alt="">
+      <img src="assets/image/messydesk.jpg" height="200" alt="" id ="messy_img">
       <p>More to come</p>
     </div>
     <div class="card3">
-      <img src="assets/image/coffee3.jpg" height="200" alt="">
+      <img src="assets/image/coffee3.jpg" height="200" alt="" id ="coffee_img">
       <p>more to come</p>
     </div>
   </section>
